week4: removing dead code from week 3
week4: fixing confusion matrix generation

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # assignment folders
 CourseIntro_Week1/**
 DataPreprocessing_Week2/**
-Classification_Week3/**
+Classification_Week*/**
 
 # emacs files
 *~
