Week8: implemented 3-fold testing and evaluation of the data set

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ CourseIntro_Week1/**
 DataPreprocessing_Week2/**
 Classification_Week*/**
 Evaluation_Week6/*
+Evaluation_Week8/*
 
 # emacs files
 *~
